change color link

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 		<link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat&family=Open+Sans&family=Roboto&family=Roboto+Condensed&display=swap" rel="stylesheet">
 		<script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/js/all.min.js"></script>
 		<link type="text/css" rel="stylesheet" href="css/styles.css">
+		<style>
+			a {
+				color: #FFF;
+			}
+		</style>
 	</head>
 
 	<body>
